--- a/exemples/cube.html
+++ b/exemples/cube.html
@@ -10,6 +10,7 @@
 <style type='text/css'>
 	a { display: block; }
 	div.perspective { perspective: 1200px; }
+	div.perspective#p2 { margin-top: 10em; }
 	.cube { left: 5%; }
 	.brique { left: 15%; }
 	.cylindre { left: 25%; }
@@ -97,10 +98,10 @@
 			<p></p><p></p><p></p>
 		</div>
 	<div class='perspective' id='p2'>
-		<div class='volume full cube'><p>haut</p><p>bas</p><p>devant</p><p>derrière</p><p>gauche</p><p>droite</p></div>
-		<div class='volume full brique'><p>haut</p><p>bas</p><p>devant</p><p>derrière</p><p>gauche</p><p>droite</p></div>
-		<div class='volume full cylindre'><p>haut</p><p>bas</p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p></div>
-		<div class='volume full toblerone'>
+		<div class='volume cube'><p>haut</p><p>bas</p><p>devant</p><p>derrière</p><p>gauche</p><p>droite</p></div>
+		<div class='volume brique'><p>haut</p><p>bas</p><p>devant</p><p>derrière</p><p>gauche</p><p>droite</p></div>
+		<div class='volume cylindre'><p>haut</p><p>bas</p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p></div>
+		<div class='volume toblerone'>
 			<p>devant</p><p>derrière</p>
 			<p>bas</p><p>gauche</p><p>droite</p>
 		</div>
