--- a/web-extension/liens-perso.html
+++ b/web-extension/liens-perso.html
@@ -42,7 +42,7 @@
 	debbyPlay.optionList =[];
 	debbyPlay.dataList =[];
 	debbyPlay.jsonList ={};
-	debbyPlay.optionChoosen = 'synergie';
+	debbyPlay.optionChoosen = 'reseaux';
 
 	const linkRef ={
 		"name": "",
@@ -67,5 +67,5 @@
 	debbyPlay.optionList.sort();
 	// la première option choisie
 	document.body.init();
-	chooseOption ('synergie');
+	chooseOption ('reseaux');
 </script></html>
