--- a/bases/base html.html
+++ b/bases/base html.html
@@ -10,7 +10,7 @@
 	<link rel='icon' type='image/svg+xml' href='../../site-dp/data/nounours-perso.svg'/>
 	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/structure.css'/>
 	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/perso.css' media='screen'/>
-	<script type='text/javascript' scr='.js'></script>
+	<script type='text/javascript' src='.js'></script>
 	<link rel='stylesheet' type='text/css' href='.css'/>
 	<style type='text/css'></style>
 </head><body>
