--- a/exemples/cube.html
+++ b/exemples/cube.html
@@ -16,6 +16,7 @@
 	}
 	div.perspective#p2 { margin-top: 10em; }
 	.volume {
+		margin: 3em;
 		--long-x: 200px;
 		--long-y: 100px;
 	}
@@ -28,11 +29,11 @@
 		<div class='volume cube arrondi full'><p>haut</p><p>bas</p><p>gauche</p><p>droite</p><p>derrière</p><p>devant</p></div>
 	</div>
 	<div class='perspective' id='p2'>
-		<div class='volume cube'><p>haut</p><p>bas</p><p>gauche</p><p>droite</p><p>derrière</p><p>devant</p></div>
-		<div class='volume brique'><p>haut</p><p>bas</p><p>gauche</p><p>droite</p><p>derrière</p><p>devant</p></div>
-		<div class='volume cylindre'><p>haut</p><p>bas</p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p></div>
-		<div class='volume toblerone'><p>haut</p><p>bas</p><p>gauche</p><p>droite</p><p>derrière</p></div>
-		<div class='volume cube arrondi'><p>haut</p><p>bas</p><p>gauche</p><p>droite</p><p>derrière</p><p>devant</p></div>
-		<div class='volume brique arrondi'><p>haut</p><p>bas</p><p>gauche</p><p>droite</p><p>derrière</p><p>devant</p></div>
+		<div class='volume cube'><p>haut</p><p>bas</p><p>gauche</p><p>droite</p><p>derrière</p><p>devant du cube</p></div>
+		<div class='volume brique'><p>haut</p><p>bas</p><p>gauche</p><p>droite</p><p>derrière</p><p>devant de la brique</p></div>
+		<div class='volume cylindre'><p>haut du cylindre</p><p>bas du cylindre</p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p></div>
+		<div class='volume toblerone'><p>haut</p><p>bas</p><p>gauche du toblerone</p><p>droite du toblerone</p><p>derrière</p></div>
+		<div class='volume cube arrondi'><p>haut</p><p>bas</p><p>gauche</p><p>droite</p><p>derrière</p><p>devant du cube arrondi</p></div>
+		<div class='volume brique arrondi'><p>haut</p><p>bas</p><p>gauche</p><p>droite</p><p>derrière</p><p>devant de la brique arrondie</p></div>
 	</div>
 </body></html>
