--- a/exemples/cube.html
+++ b/exemples/cube.html
@@ -2,57 +2,42 @@
 	<title>cube en css</title>
 	<meta name='viewport' content='width=device-width,initial-scale=1'/>
 	<meta charset='utf-8'/>
-	<link rel='icon' type='image/svg+xml' href='../../site-dp/data/nounours-perso.svg'/>
-	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/structure.css'/>
-	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/perso.css' media='screen'/>
+	<base href=''>
+	<link rel='icon' type='image/svg+xml' href='C:\Users\deborah.powers\site-dp\data\nounours-perso.svg'/>
+	<link rel='stylesheet' type='text/css' href='C:\Users\deborah.powers\site-dp\library-css\structure.css'/>
+	<link rel='stylesheet' type='text/css' href='C:\Users\deborah.powers\site-dp\library-css\perso.css' media='screen'/>
 	<link rel='stylesheet' type='text/css' href='cube.css'/>
 <style type='text/css'>
 	body { padding-bottom: 30em; }
 	a { display: block; }
 	cadre { margin-top: 2cm; }
 	volume {
-		--long-x: 100px;
-		--long-y: 140px;
-		--long-z: 90px;
-		--border: dotted 2px purple;
+		--long-x: 90px;
+		--long-y: 150px;
+		--long-z: 110px;
 		--bg-color: #AFD;
-		margin: 0;
+		--border: solid 1px red;
+		margin-right: 4em;
 	}
 /*
 	background-color: pink;
+volume.cone > *:nth-child(1) {
+	transform: rotateX(270deg);
+}
 */
-/* le toit. ordre des faces: gauche, droite, devant, derrière, bas */
-volume.toit >*:nth-child(1){ transform: rotateY(270deg) translateX(-50%); }
-volume.toit >*:nth-child(2){ transform: rotateY(90deg) translate3d(-50%, 0, var(--long-x)); }
-volume.toit >*:nth-child(3) { transform: rotateX(45deg); }
-volume.toit >*:nth-child(4) { transform: rotateY(180deg) rotateX(45deg); }
-volume.toit > *:nth-child(5) {
-	transform-origin: bottom center;
-	transform: rotateX(-90deg) translateY(calc(var(--long-z) /2)) translateZ(calc(var(--long-y) - var(--long-z)));
-}
-/* la maison. ordre des façades: gauche, droite, devant, derrière, bas. ordre du toit: gauche, droite, devant, derrière, sol */
-volume.toit >*:nth-child(1), volume.toit >*:nth-child(2), volume.maison >*:nth-child(6), volume.maison >*:nth-child(7){
-	transform-origin: top left;
-	clip-path: polygon(0 100%, 50% 0, 100% 100%);
-	width: var(--long-z);
-	height: calc(var(--long-z) /2);
-}
-volume.maison >*:nth-child(6){ transform: rotateY(270deg) translate(-50%, -100%); }
-volume.maison >*:nth-child(7){ transform: rotateY(90deg) translate3d(-50%, -100%, var(--long-x)); }
-
-volume.toit >*:nth-child(3), volume.toit >*:nth-child(4), volume.maison >*:nth-child(8), volume.maison >*:nth-child(9){
-	transform-origin: top center;
-	height: calc(var(--long-z) /1.4142);
-}
-volume.maison >*:nth-child(8) { transform: translateY(calc(var(--long-z) /-2)) rotateX(45deg); }
-volume.maison >*:nth-child(9) { transform: translateY(calc(var(--long-z) /-2)) rotateY(180deg) rotateX(45deg); }
 </style></head><body>
 	<cadre>
-		<volume class='toit spin-x'><p>gauche</p><p>droite</p><p>devant</p><p>derrière</p><p>bas</p></volume>
+		<volume class='cone spin-x'><p>base</p><p></p><p></p><p></p></volume>
 	</cadre>
 	<cadre>
+		<volume class='cylindre'><p>haut</p><p>bas</p><p></p><p></p></volume>
+		<volume class='cylindre va'><p>haut</p><p>bas</p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p></volume>
+		<volume class='cone'><p>base</p><p></p><p></p><p></p></volume>
+		<volume class='pyramide'><p>base</p><p>devant</p><p>derrière</p><p>gauche</p><p>droite</p></volume>
+		<volume class='toblerone'><p>haut</p><p>bas</p><p>derrière</p><p>gauche</p><p>droite</p></volume>
 		<volume class='toit'><p>gauche</p><p>droite</p><p>devant</p><p>derrière</p><p>bas</p></volume>
 		<volume class='maison'><p>gauche</p><p>droite</p><p>devant de la maison</p><p>derrière</p><p>bas</p><p>gauche</p><p>droite</p><p>devant</p><p>derrière</p></volume>
 		<volume class='pave'><p>gauche</p><p>droite</p><p>devant du pave</p><p>derrière</p><p>bas</p><p>haut</p></volume>
 	</cadre>
 </body></html>
+
