--- a/exemples/cube.html
+++ b/exemples/cube.html
@@ -21,13 +21,30 @@
 	}
 /*
 	background-color: pink;
-volume.cone > *:nth-child(1) {
-	transform: rotateX(270deg);
-}
 */
+p#triangle {
+	border-color: yellow blue red green;	/*top right bottom left*/
+	border-style: solid;
+	border-width: 1em 2em 3em 4em;	/*top right bottom left*/
+	height: 6em;
+	width: 6em;
+}
+.balle {
+	display: inline-block;
+	background-color: red;
+	width: 10em;
+	height: 10em;
+}
+.cylindre-droit {
+	background: linear-gradient(90deg, orange, white, orange);
+	width: 10em;
+	height: 10em;
+}
+.cylindre-droit >* { background-color: #F005; }
+.cylindre-droit >*:nth-child(1) { background-color: #F00; }
 </style></head><body>
 	<cadre>
-		<volume class='cone spin-x'><p>base</p><p></p><p></p><p></p></volume>
+		<volume class='cone'><p>base</p><p></p><p></p><p></p></volume>
 	</cadre>
 	<cadre>
 		<volume class='cylindre'><p>haut</p><p>bas</p><p></p><p></p></volume>
@@ -39,5 +56,9 @@ volume.cone > *:nth-child(1) {
 		<volume class='maison'><p>gauche</p><p>droite</p><p>devant de la maison</p><p>derrière</p><p>bas</p><p>gauche</p><p>droite</p><p>devant</p><p>derrière</p></volume>
 		<volume class='pave'><p>gauche</p><p>droite</p><p>devant du pave</p><p>derrière</p><p>bas</p><p>haut</p></volume>
 	</cadre>
+	<div class='cylindre-droit'><p>cylindre</p><p>droit</p></div>
+	<div class='cylindre-droit couche'><p>cylindre</p><p>couché</p></div>
+	<p class='balle'></p>
+	<p id='triangle'></p>
 </body></html>
 
